[gd_scene load_steps=2 format=3]

[ext_resource type="Script" uid="uid://cr0v7a1yxwmuw" path="res://scenes/ui/pause_menu.gd" id="1_script"]

[node name="PauseMenuLayer" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_script")

[node name="Dimmer" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="PauseMenu" type="PanelContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -100.0
offset_right = 80.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContentMargin" type="MarginContainer" parent="PauseMenu"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/ContentMargin"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TitleMargin" type="MarginContainer" parent="PauseMenu/ContentMargin/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 8

[node name="TitleBox" type="VBoxContainer" parent="PauseMenu/ContentMargin/VBoxContainer/TitleMargin"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="TitleLabel" type="Label" parent="PauseMenu/ContentMargin/VBoxContainer/TitleMargin/TitleBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "PAUSED"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PauseMenu/ContentMargin/VBoxContainer/TitleMargin/TitleBox"]
layout_mode = 2

[node name="MenuButtons" type="VBoxContainer" parent="PauseMenu/ContentMargin/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 6
alignment = 1

[node name="ResumeButton" type="Button" parent="PauseMenu/ContentMargin/VBoxContainer/MenuButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
text = "Resume"

[node name="RestartButton" type="Button" parent="PauseMenu/ContentMargin/VBoxContainer/MenuButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
text = "Restart"

[node name="OptionsButton" type="Button" parent="PauseMenu/ContentMargin/VBoxContainer/MenuButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
text = "Options"

[node name="MainMenuButton" type="Button" parent="PauseMenu/ContentMargin/VBoxContainer/MenuButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
text = "Main Menu"

[node name="ExitButton" type="Button" parent="PauseMenu/ContentMargin/VBoxContainer/MenuButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
text = "Exit Game"

[connection signal="pressed" from="PauseMenu/ContentMargin/VBoxContainer/MenuButtons/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseMenu/ContentMargin/VBoxContainer/MenuButtons/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="PauseMenu/ContentMargin/VBoxContainer/MenuButtons/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="PauseMenu/ContentMargin/VBoxContainer/MenuButtons/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="PauseMenu/ContentMargin/VBoxContainer/MenuButtons/ExitButton" to="." method="_on_exit_button_pressed"]
